--- a/style.css
+++ b/style.css
@@ -192,3 +192,17 @@ footer a:link, footer a:visited {
 	width: 148px; 
 	height: 110px;
 	}
+
+
+body {
+    background-color: DarkSlateBlue;
+
+    }
+ul {
+    font-family: "Helvetica";
+    font-size: 20px;
+    }
+a {
+    text-decoration: none;
+    color: DarkSlateBlue;
+    }
