--- a/style.css
+++ b/style.css
@@ -206,3 +206,15 @@ a {
     text-decoration: none;
     color: DarkSlateBlue;
     }
+
+
+/*Simple reset*/
+* {margin: 0; padding: 0;}
+
+body {
+	/*You can use any kind of background here.*/
+	background: #6b92b9;
+}
+canvas {
+	display: block;
+}
