--- a/style.css
+++ b/style.css
@@ -1,220 +1,128 @@
-/* css Zen Garden default style v1.02 */
-/* css released under Creative Commons License - http://creativecommons.org/licenses/by-nc-sa/1.0/  */
-
-/* This file based on 'Tranquille' by Dave Shea */
-/* You may use this file as a foundation for any new work, but you may find it easier to start from scratch. */
-/* Not all elements are defined in this file, so you'll most likely want to refer to the xhtml as well. */
-
-/* Your images should be linked as if the CSS file sits in the same folder as the images. ie. no paths. */
-
-
-/* basic elements */
-html {
-	margin: 0;
-	padding: 0;
-	}
+* { 
+    margin: 0;
+    padding: 0;
+}
+/*this will add external ubuntu font*/
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Ubuntu'), url(http://fonts.gstatic.com/s/ubuntu/v7/sVvvcJDRTINJla2R4XwPVevvDin1pK8aKteLpeZ5c0A.ttf) format('truetype');
+}
 body { 
-	font: 75% georgia, sans-serif;
+	font-family: Ubuntu, Verdana, sans-serif;
 	line-height: 1.88889;
 	color: #555753; 
-	background: #fff url(blossoms.jpg) no-repeat bottom right; 
+	background: WhiteSmoke; 
 	margin: 0; 
 	padding: 0;
-	}
-p { 
-	margin-top: 0; 
-	text-align: justify;
-	}
-h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 0; 
-	color: #7D775C;
-	}
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
-abbr {
-	border-bottom: none;
-	}
-
-
-/* specific divs */
-.page-wrapper { 
-	background: url(zen-bg.jpg) no-repeat top left; 
-	padding: 0 175px 0 110px;  
-	margin: 0; 
-	position: relative;
-	}
-
-.intro { 
-	min-width: 470px;
-	width: 100%;
-	}
-
-header h1 { 
-	background: transparent url(h1.gif) no-repeat top left;
-	margin-top: 10px;
-	display: block;
-	width: 219px;
-	height: 87px;
-	float: left;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header h2 { 
-	background: transparent url(h2.gif) no-repeat top left; 
-	margin-top: 58px; 
-	margin-bottom: 40px; 
-	width: 200px; 
-	height: 18px; 
-	float: right;
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-header {
-	padding-top: 20px;
-	height: 87px;
 }
+#page {
+  background-color: #EDF7FF;
+  width: 800px;
+  margin: auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+header {
+    width: 799px;
+    height: 64px;
+    background-color: rgba(176, 176, 176, 0.19); /*previously used this, dont like it #83CCFF*/
+}
+#logo {
+    width: 98px;
+    height:60px;
+    float: left;
+    margin-left: 2px;
+    margin-top: 2px;
+}
+nav{
+    width: 90%;
+}
+#floater {
+    float: left;
+    height: 50px;
+    width: 70px;
+}
+#navigation {
+    float: left;
+    align-self: clear:both;
+    margin-left: auto;
+    margin-right: auto;
+/*
+    width: 100%;
+*/
+}
+#foo {
+    color:black;
+    margin-left: auto;
+    margin-right: auto;
+    width: 99%;
+    background-color: #B0B0B0;
+    align-items: center;
+}
+nav{
+    height:64px;
+}
+nav ul li {
+    display: inline-block;
+    list-style-type: none;
+/*    text-align: center;*/
+/*    padding-left: 5px;
+    padding-right: 5px;*/
+    margin-left: 5px;
+    margin-right: 5px;
+    line-height:64px;
+    text-align: middle;
+}
+nav ul li:hover {
+    background-color:rgba(176, 176, 176, 0.35);
 
-.summary {
-	clear: both; 
-	margin: 20px 20px 20px 10px; 
-	width: 160px; 
-	float: left;
-	}
-.summary p {
-	font: italic 1.1em/2.2 georgia; 
-	text-align: center;
-	}
-
-.preamble {
-	clear: right; 
-	padding: 0px 10px 0 10px;
-	}
-.supporting {	
-	padding-left: 10px; 
-	margin-bottom: 40px;
-	}
-
+}
+nav ul {
+    text-align: center;
+/*
+    padding: 0;
+*/
+}
 footer { 
 	text-align: center; 
 	}
 footer a:link, footer a:visited { 
 	margin-right: 20px; 
 	}
-
-.sidebar {
-	margin-left: 600px; 
-	position: absolute; 
-	top: 0; 
-	right: 0;
-	}
-.sidebar .wrapper { 
-	font: 10px verdana, sans-serif; 
-	background: transparent url(paper-bg.jpg) top left repeat-y; 
-	padding: 10px; 
-	margin-top: 150px; 
-	width: 130px; 
-	}
-.sidebar h3.select { 
-	background: transparent url(h3.gif) no-repeat top left; 
-	margin: 10px 0 5px 0; 
-	width: 97px; 
-	height: 16px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.archives { 
-	background: transparent url(h5.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:57px; 
-	height: 14px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.resources { 
-	background: transparent url(h6.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:63px; 
-	height: 10px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-
-
-.sidebar ul {
-	margin: 0;
-	padding: 0;
-	}
-.sidebar li {
-	line-height: 1.3em; 
-	background: transparent url(cr1.gif) no-repeat top center; 
-	display: block; 
-	padding-top: 5px; 
-	margin-bottom: 5px;
-	list-style-type: none;
-	}
-.sidebar li a:link {
-	color: #988F5E;
-	}
-.sidebar li a:visited {
-	color: #B3AE94;
-	}
-
-
-.extra1 {
-	background: transparent url(cr2.gif) top left no-repeat; 
-	position: absolute; 
-	top: 40px; 
-	right: 0; 
-	width: 148px; 
-	height: 110px;
-	}
-
-
-body {
-    background-color: DarkSlateBlue;
-
-    }
 ul {
     font-family: "Helvetica";
     font-size: 20px;
     }
 a {
     text-decoration: none;
-    color: DarkSlateBlue;
+    font-weight: bold; 
+    color: #003399;
     }
-
-
-/*Simple reset*/
-* {margin: 0; padding: 0;}
-
-body {
-	/*You can use any kind of background here.*/
-	background: #6b92b9;
+a:visited {
+    text-decoration: none;
+    color: #003399 ;
 }
-canvas {
-	display: block;
+/*a:hover {
+    color: rgba(165, 203, 255, 0.86) ;
+}*/
+.content {
+    width: 95%;
+    margin: auto;
+}
+
+.content img {
+    margin: 20px;
+    width: 300px;
+}
+.imgright{
+    float:right;
+    text-align: center;
+}
+.imgrightzoom img{
+    float:right;
+    width:auto;
+}
+.zoom{
 }
