--- a/205ledakist/templates/header.html
+++ b/205ledakist/templates/header.html
@@ -11,7 +11,7 @@
                     <li><a href="/history">History</a></li>
                     <li><a href="/contact">Contact Us</a></li>
                     <li><a href="/university">University</a></li>
-                    <li><a href="/info">Information</a></li>
+                    <li><a href="/places">Places</a></li>
                 </ul>
             </div>
         </nav>
