--- a/205ledakist/templates/base.html
+++ b/205ledakist/templates/base.html
@@ -4,7 +4,7 @@
       {% block head %}
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="/static/style.css" />
-        <title>{% block title %}:){% endblock %} - Coventry Guide</title>
+        <title>{% block title %}Default title{% endblock %} - Coventry Guide</title>
 
         <meta name="description" content="Discover the city of Coventry! A simple guide to the city. Created on 2014.">
         <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
